# heat-diffusion

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
proposal/: proposal.tex
scripts/: make_output_dir.sh  run.sh  run_output.sh  run_output_cpu.sh  run_output_distributed_gpu.sh  run_output_fast.sh  run_output_shared_gpu.sh  run_output_slow.sh  run_profile.sh  run_profile_cpu.sh  run_profile_distributed_gpu.sh  run_profile_fast.sh  run_profile_shared_gpu.sh  run_profile_slow.sh  run_solver_fast.sh  run_solver_slow.sh  test.sh
src/: CMakeLists.txt  kernel_fast.cpp  kernel_fast.hpp  kernel_slow.cpp  kernel_slow.hpp  kernels.hpp  main.cpp  problem_spec.hpp  solver.cpp  solver.hpp
src/kernels/: kernel_cpu.cpp  kernel_distributed_gpu.cpp  kernel_fast.cpp  kernel_shared_gpu.cpp  kernel_slow.cpp  kernels.hpp
src/solvers/: solver_cpu.cpp  solver_distributed_gpu.cpp  solver_fast.cpp  solver_shared_gpu.cpp  solver_slow.cpp  solvers.hpp
src/util/: constants.hpp  decomposition.hpp  helpers.hpp  initial_condition.hpp  problem_spec.hpp
tests/: CMakeLists.txt  test_analytic.cpp  test_kernel_cpu.cpp  test_kernel_distributed_gpu.cpp  test_kernel_fast.cpp  test_kernel_shared_gpu.cpp  test_kernel_slow.cpp  test_solver.cpp
tests/helpers/: analytic.cpp  analytic.hpp  compare.hpp
